// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete project chain 1`] = `
"<header>
  <a class=\\"logo\\" href=\\"\\"> Simple CI </a>
</header>
<!--0-->
<main>
  <ul class=\\"breadcrumb\\">
    <li>
      <a href=\\"\\"> Projects </a>
    </li>
    <li>
      <a href=\\"projects/1\\">Test</a>
    </li>
    <li>
      <a href=\\"projects/1/chains/2\\">Test chain</a>
    </li>
    <!--0-->
    <!--0-->
    <li>Delete</li>
  </ul>
  <!--0-->
  <!--0-->
  <!--0-->
  <!--0-->
  <div class=\\"modal\\">
    <div class=\\"content\\">
      <div class=\\"header\\">Delete project chain</div>
      <div class=\\"body\\">Do you want delete chain \\"Test chain\\"?</div>
      <div class=\\"footer\\">
        <button class=\\"ok danger\\"><span>Confirm</span></button>
        <button class=\\"cancel\\"><span>Cancel</span></button>
      </div>
    </div>
  </div>
  <!--0-->
  <!--1-->
  <!--0-->
  <!--1-->
  <!--0-->
</main>
<footer> Sham 2018
  (v 0.0.7) </footer>
<!--1-->"
`;

exports[`delete project chain 2`] = `
"<header>
  <a class=\\"logo\\" href=\\"\\"> Simple CI </a>
</header>
<!--0-->
<main>
  <ul class=\\"breadcrumb\\">
    <li>
      <a href=\\"\\"> Projects </a>
    </li>
    <!--0-->
    <li>Test</li>
  </ul>
  <!--0-->
  <!--0-->
  <!--0-->
  <!--0-->
  <div class=\\"project-info\\">
    <h3>Test</h3>
    <dl>
      <dt>/tmp/</dt>
      <dd>Current work directory.</dd>
      <dd>This directory will be used when running tasks.</dd>
      <dt>
        <a href=\\"projects/1/edit\\"> Edit </a>
      </dt>
      <dd>Edit project name &amp; cwd</dd>
      <dt>
        <a class=\\"project-delete-link\\" href=\\"projects/1/delete\\"> Delete </a>
      </dt>
      <dd>Delete project</dd>
    </dl>
  </div>
  <div class=\\"project-chains\\">
    <h3>Chains</h3>
    <button class=\\"project-chain\\">Test chain</button>
    <!--0-->
    <!--0-->
    <!--0-->
    <a class=\\"project-chain project-chain-create\\" href=\\"projects/1/chains/create\\">
      <div class=\\"create-icon\\"></div>
    </a>
  </div>
  <!--0-->
  <!--1-->
  <!--0-->
  <!--1-->
  <!--0-->
</main>
<footer> Sham 2018
  (v 0.0.7) </footer>
<!--1-->"
`;
